--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ img {
 .header_nav {
   width: 100%;
   height: 404px;
-  background-image: url("https://www.klevermedia.co.uk/html_templates/movie_star_html/images/hero-1.jpg");
+  background-image: url("img/hero-2.jpg");
   background-size: auto;
 }
 
@@ -216,8 +216,8 @@ img {
 
 .main_left-content_content1 {
   color: #717171;
-  width: 655px;
-  height: 1060px;
+  width: 80%;
+  height: auto;
   margin-left: 105px;
   margin-top: 75px;
 }
@@ -659,6 +659,7 @@ button, input, select, textarea {
 
   .main_left-content_content1-text {
     width: 100%;
+    margin-left: 8px;
   }
 
   .main {
@@ -682,12 +683,9 @@ button, input, select, textarea {
 
   .main_left-content_content1_text_title1_text {
     font-size: 1.5rem;
-    width: 100%;
   }
 
   #text_manager {
-    width: 100%;
-    background-color: #ec7532;
     height: auto;
   }
 }
